--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -4,8 +4,10 @@
   type: github
   icon: 'fab fa-github'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
+
+  type: linkedin
+  icon: 'fab fa-linkedin'
+  url:  'https://www.linkedin.com/in/aleksandrs-maslovs-46980bb3/'
 -
   type: email
   icon: 'fas fa-envelope'
@@ -21,10 +23,14 @@
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your mastodon account page
 # -
-#   type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
+#  type: linkedin
+#  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+#  url:  'https://www.linkedin.com/in/aleksandrs-maslovs-46980bb3/'                  # Fill with your Linkedin homepage
 # -
 #   type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
 #   url:  ''                  # Fill with your stackoverflow homepage
+#
+#   type: twitter
+#   icon: 'fab fa-twitter'#
+#
