--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/aleksandrs-maslovs-46980bb3/
 
-google_site_verification:               # fill in to your verification string
+google_site_verification: S8fcEOdFcOu1sbLWG359ij3krVhZamsQDwujurfS_qc
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
