--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ theme_mode:   light
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://media-exp1.licdn.com/dms/image/C4E03AQHtR03gXg2kKw/profile-displayphoto-shrink_800_800/0/1517614352628?e=1674691200&v=beta&t=k2h2xkgAPwHKGkIj2grDg1WxSp3GqWuUtq8hI_eRhdI
+avatar: assets\img\general\photo.jpg
 
 
 # boolean type, the global switch for ToC in posts.
