--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ theme_mode:   light
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets\img\general\photo.jpg
+avatar: https://raw.githubusercontent.com/amaslovs/amaslovs.github.io/main/assets/img/general/photo.jpg
 
 
 # boolean type, the global switch for ToC in posts.
